refactor(com.onionnetworks): remove finalize; add AutoCloseable and close()\n\n- FECCode: implement AutoCloseable (no-op close)\n- Native8Code/Native16Code: remove finalize(), add idempotent native free in close()\n- RAF: implement AutoCloseable and remove finalize()\n- Update OnionFECCodec + unit tests to use try-with-resources around FECCode\n\nfix: resolve compile warnings and deprecations\n\n- Annotate deprecated mantissa constructors/field with @Deprecated\n- Replace deprecated boxing (Integer.valueOf/Long.toString)\n- Scope-suppress Unsafe removal warning in UdpSocketHandler getFd()\n\ntest: wrap FECCode usage in CodeTest with try-with-resources\n\nNo functional changes to algorithm behavior; enables deterministic resource cleanup and future JDK compatibility.